# ClaudeLander

./: .gitignore  AGENTS.md  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci-linux.yml  ci-windows-cross.yml  ci-windows-native.yml  enforce-issue-linked-pr.yml
cmake/: mingw-w64-x86_64.cmake
docs/: ARCHITECTURE.md  REFERENCE.md
docs/adr/: 0000-pass0-gate-skips.md  0001-mingw-toolchain-link-flags.md  0002-pass1-arithmetic-precision.md  0003-repo-collaboration-policy.md  0004-world-module-boundary.md  0005-pass-2-amplitude-divisor-open.md  0006-pass-3-y-flip-no-negation.md  0007-dod-requires-human-verification.md
docs/plans/: pass-10-rock-particles.md  pass-11-object-map.md  pass-12-hud.md  pass-13-game-loop.md  pass-14-e2e-validation.md  pass-15-windows-verify.md  pass-2-terrain.md  pass-3-projection.md  pass-4-ship-kinematics.md  pass-5-input-mouse-polar.md  pass-6-render-faces.md  pass-7-camera-follow.md  pass-8-bin-sorter.md  pass-9-shadow-collision.md
docs/research/: pass-10-rock-particles-spec.md  pass-2-terrain-spec.md  pass-3-projection-spec.md  pass-4-ship-kinematics-spec.md  pass-5-mouse-polar-spec.md  pass-6-faces-spec.md  pass-8-bin-sorter-spec.md  pass-9-shadow-collision-spec.md
scripts/: check_pr_link.sh  setup-branch-protection.sh
src/: main.cpp
src/core/: face_types.hpp  lookup_tables.cpp  lookup_tables.hpp  matrix3.hpp  prng.cpp  prng.hpp  vec2.hpp  vec3.cpp  vec3.hpp
src/entities/: ground_object.cpp  ground_object.hpp  particle.cpp  particle.hpp  rock.cpp  rock.hpp  ship.cpp  ship.hpp
src/game/: game_loop.cpp  game_loop.hpp  game_state.cpp  game_state.hpp  render_frame.cpp  render_frame.hpp
src/input/: mouse_polar.cpp  mouse_polar.hpp
src/physics/: collision.cpp  collision.hpp  kinematics.cpp  kinematics.hpp
src/render/: bin_sorter.cpp  bin_sorter.hpp  faces.cpp  faces.hpp  hud.cpp  hud.hpp  projection.cpp  projection.hpp  shadow.hpp
src/world/: camera_follow.cpp  camera_follow.hpp  object_map.cpp  object_map.hpp  shadow.cpp  terrain.cpp  terrain.hpp
tests/: test_bin_sorter.cpp  test_camera_follow.cpp  test_collision.cpp  test_faces.cpp  test_game_loop.cpp  test_hud.cpp  test_kinematics.cpp  test_lookup_tables.cpp  test_matrix3.cpp  test_mouse_polar.cpp  test_object_map.cpp  test_particle.cpp  test_prng.cpp  test_projection.cpp  test_repo_policy.cpp  test_rock.cpp  test_shadow.cpp  test_ship.cpp  test_smoke.cpp  test_terrain.cpp  test_vec3.cpp
tests/fixtures/pr_bodies/: fail_keyword_no_number.txt  fail_no_keyword.txt  pass_fixes.txt  pass_resolves_cross_repo.txt  pass_title_only.title
tests/scripts/: check_pr_link_keyword.sh
